Возможность указать имя/фамилию при регистрации

--- a/bot/pyproject.toml
+++ b/bot/pyproject.toml
@@ -71,6 +71,7 @@ ignore = [
 	# "B008",   # Do not perform function call `<name>` in argument defaults (false positive on FastAPI)
 	"B905",   # `zip()` without an explicit `strict=` parameter
 	"BLE001", # Do not catch blind exception: `Exception`
+	"COM812",
 	"D100",    # Missing docstring in public module
 	"D101",
 	"D102",
