--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,7 @@ name: Build and deploy workflow
 on:
   push:
     branches:
-      - main
+      - deploy
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
