--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       API_TOKEN: $API_TOKEN
       ADMIN_ID: $ADMIN_ID
-      ACCESS_KEY: $secrets.ACCESS_KEY
+      ACCESS_KEY: $ACCESS_KEY
     command: >
       sh -c "python bot/bot.py"
 
