--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,7 +30,7 @@ jobs:
           mkdir deploy
           cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yml
       - name: copy file to server
-        uses: appleboy/scp-action@deploy
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
@@ -39,7 +39,7 @@ jobs:
           target: "app"
           strip_components: 1
       - name: deploy app
-        uses: appleboy/ssh-action@deploy
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
