--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -47,4 +47,4 @@ jobs:
           script: |
             cd app
             echo ${{ secrets.PASSWORD }} | sudo -S docker-compose down
-            echo ${{ secrets.PASSWORD }} | docker-compose up -d
+            echo ${{ secrets.PASSWORD }} | sudo -S docker-compose up -d
