--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,31 @@ services:
   bot:
     build:
       context: .
-    image: andreygolovin5/telegrambot
+      dockerfile: Dockerfile
     env_file:
       - .env
     restart: always
     command: >
       sh -c "python bot/bot.py"
+
+  db:
+    image: postgres:15.1-alpine
+    environment:
+      POSGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    restart: always
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    volumes:
+      - data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   data:
