--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,9 @@
 API_TOKEN="API_TOKEN"
 ADMIN_ID="TG Admin ID here"
 ACCESS_KEY="Your access key"
+
+POSTGRES_USER="postgres_user"
+POSTGRES_PASSWORD="postgres_password"
+POSTGRES_DB="postgres_db"
+POSTGRES_HOST="postgres_host"
+POSTGRES_PORT="5432"
