--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,6 +22,11 @@ jobs:
       API_TOKEN: ${{ secrets.API_TOKEN }}
       ADMIN_ID: ${{ secrets.ADMIN_ID }}
       ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
+      POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
+      POSTGRES_PORT: ${{ POSTGRES_PORT }}
     steps:
       - name: clone code
         uses: actions/checkout@v2
