--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -12,6 +12,7 @@ services:
       POSTGRES_USER: $POSTGRES_USER
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_PORT: $POSTGRES_PORT
     command: python bot/bot.py
 
   db:
