--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -8,4 +8,33 @@ services:
       API_TOKEN: $API_TOKEN
       ADMIN_ID: $ADMIN_ID
       ACCESS_KEY: $ACCESS_KEY
+      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
+      POSTGRES_PORT: $POSTGRES_PORT
     command: python bot/bot.py
+
+  db:
+    image: postgres:15.1-alpine
+    environment:
+      API_TOKEN: $API_TOKEN
+      ADMIN_ID: $ADMIN_ID
+      ACCESS_KEY: $ACCESS_KEY
+      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_USER: $POSTGRES_USER
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD
+      POSTGRES_DB: $POSTGRES_DB
+    restart: always
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  pg_data:
