--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: "3.9"
 
 services:
   bot:
@@ -13,7 +13,12 @@ services:
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
       POSTGRES_PORT: $POSTGRES_PORT
-    command: python bot/bot.py
+    depends_on:
+      db:
+        condition: service_healthy
+      migrations:
+        condition: service_completed_successfully
+    command: cd bot/ && alembic upgrade head && cd ../ && python bot/bot.py
 
   db:
     image: postgres:15.1-alpine
